fix | base entity generic