@@ -3,14 +3,13 @@ package com.saludSystem.services.modules.Generals.Aseguradoras.impl;
 import com.saludSystem.dtos.Generals.Aseguradora.ActualizarAseguradoraDTO;
 import com.saludSystem.dtos.Generals.Aseguradora.AseguradoraDTO;
 import com.saludSystem.dtos.Generals.Aseguradora.CrearAseguradoraDTO;
+import com.saludSystem.dtos.responses.ApiResponse;
+import com.saludSystem.dtos.responses.ListResponse;
 import com.saludSystem.entities.Aseguradora;
 import com.saludSystem.exception.ResourceNotFoundException;
 import com.saludSystem.repositories.modules.Generals.AseguradoraRepository;
 import com.saludSystem.services.modules.Generals.Aseguradoras.AseguradoraService;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
@@ -29,10 +28,10 @@ public class AseguradoraServiceImpl implements AseguradoraService {
     }
 
     @Override
-    public CrearAseguradoraDTO saveAseguradora(CrearAseguradoraDTO crearAseguradoraDTO) {
+    public ApiResponse saveAseguradora(CrearAseguradoraDTO crearAseguradoraDTO) {
         Aseguradora aseguradora = modelMapper.map(crearAseguradoraDTO, Aseguradora.class);
         aseguradoraRepository.save(aseguradora);
-        return modelMapper.map(aseguradora, CrearAseguradoraDTO.class);
+        return new ApiResponse(true, "Aseguradora creada Correctamente");
     }
 
     @Override
@@ -43,41 +42,44 @@ public class AseguradoraServiceImpl implements AseguradoraService {
     }
 
     @Override
-    public Optional<AseguradoraDTO> getAseguradoraById(UUID aseguradoraId) {
-        return Optional.ofNullable(aseguradoraRepository.findById(aseguradoraId).map(this::convertToDTO)
-                .orElseThrow(() -> new ResourceNotFoundException("Aseguradora no encontrada con ID" + aseguradoraId)));
+    public AseguradoraDTO getAseguradoraById(UUID aseguradoraId) {
+        Aseguradora aseguradora = aseguradoraRepository.findById(aseguradoraId)
+                .orElseThrow(() -> new RuntimeException("Aseguradora no encontrada"));
+        AseguradoraDTO dto = new AseguradoraDTO();
+        dto.setAseguradoraId(aseguradora.getAseguradoraId());
+        dto.setDescripcion(aseguradora.getDescripcion());
+        dto.setEstado(aseguradora.getEstado());
+        return dto;
     }
 
 
     @Override
-    public ActualizarAseguradoraDTO updateAseguradora(UUID aseguradoraId, ActualizarAseguradoraDTO actualizarAseguradoraDTO) {
+    public ApiResponse updateAseguradora(UUID aseguradoraId, ActualizarAseguradoraDTO actualizarAseguradoraDTO) {
         Aseguradora aseguradora = aseguradoraRepository.findById(aseguradoraId).orElseThrow(
                 () -> new ResourceNotFoundException("Aseguradora no encontrada con ID: " + aseguradoraId));
         Optional.ofNullable(actualizarAseguradoraDTO.getDescripcion()).filter(desc -> !desc.isBlank()).ifPresent(aseguradora::setDescripcion);
         Optional.ofNullable(actualizarAseguradoraDTO.getEstado()).ifPresent(aseguradora::setEstado);
         aseguradoraRepository.save(aseguradora);
-        return modelMapper.map(aseguradora, ActualizarAseguradoraDTO.class);
+        return new ApiResponse(true, "Aseguradora actualizada correctamente");
     }
 
     @Override
-    public void deleteAseguradora(UUID aseguradoraId) {
-        Aseguradora aseguradora = aseguradoraRepository.findById(aseguradoraId)
-                .orElseThrow(() -> new RuntimeException("Aseguradora no encontrada con ID: " + aseguradoraId));
-        aseguradoraRepository.delete(aseguradora);
+    public ApiResponse deleteAseguradora(UUID aseguradoraId) {
+        aseguradoraRepository.deleteById(aseguradoraId);
+        return new ApiResponse(true, "Aseguradora eliminada correctamente");
     }
 
     @Override
-    public long getTotalCount() {
-        return aseguradoraRepository.count();
-    }
-
-    @Override
-    public List<AseguradoraDTO> getPagedResults(UUID hospitalId, int page, int rows) {
-        Pageable pageable = PageRequest.of(page - 1, rows);
-        Page<Aseguradora> aseguradorasPage = aseguradoraRepository.findAll(pageable);
-        return aseguradorasPage.getContent().stream()
-                .map(aseguradora -> modelMapper.map(aseguradora, AseguradoraDTO.class))
-                .toList();
+    public ListResponse<AseguradoraDTO> getAllAseguradoras(UUID hospitalId, int page, int rows) {
+        List<Aseguradora> aseguradoras = aseguradoraRepository.findByHospital_HospitalId(hospitalId);
+        List<AseguradoraDTO> data = aseguradoras.stream().map(aseguradora -> {
+            AseguradoraDTO dto = new AseguradoraDTO();
+            dto.setAseguradoraId(aseguradora.getAseguradoraId());
+            dto.setDescripcion(aseguradora.getDescripcion());
+            dto.setEstado(aseguradora.getEstado());
+            return dto;
+        }).collect(Collectors.toList());
+        return new ListResponse<>(data,data.size());
     }
 
     private AseguradoraDTO convertToDTO(Aseguradora aseguradora) {
